tests/success/ownership/borrow-fun-app.rs
let mut x: &mut String ="hello";
let y = f(&x)
let z = f(&mut x)