tests/fail/ownership/borrow-1-2.rs
let mut x: mut String = "hello";
let y: &mut String = &x;
x; // Invalid